# payment-gateway-simulation

./: .env.example  .gitignore  DESIGN.md  Dockerfile  JAPANESE_RESUME.md  Makefile  README.md  README_JP.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  dependencies.py  deps.py
app/api/routers/: health.py  merchants.py  payments.py
app/api/v1/: merchants.py  payments.py  refunds.py  webhooks.py
app/core/: __init__.py  config.py  enums.py  exceptions.py  logging.py  rate_limiter.py  security.py
app/db/: base.py  engine.py  models.py  repository.py  session.py
app/db/models/: idempotency.py  merchant.py  payment.py  refund.py  webhook_event.py
app/domain/: enums.py  merchant.py  payment.py  refund.py
app/repositories/: api_key_repository.py  idempotency_repository.py  merchant_repository.py  payment_repository.py  refund_repository.py  webhook_event_repository.py
app/schemas/: merchant.py  payment.py  refund.py  webhook.py
app/scripts/: __init__.py  seed_data.py
app/services/: auth_service.py  exceptions.py  merchant_service.py  payment_service.py  rate_limit_service.py  refund_service.py  webhook_service.py
app/utils/: idempotency.py  signatures.py  time.py  uuid.py
app/workers/: retry_scheduler.py  webhook_dispatcher.py
docker/: api.Dockerfile  init.sql  postgres.Dockerfile
examples/: payment-gateway.postman_collection.json
scripts/: local_dev.sh  test.sh
tests/: __init__.py  conftest.py  test_merchant_service.py  test_payment_service.py  test_security.py
tests/integration/: test_payment_flow.py  test_webhooks.py
tests/unit/: test_payments.py  test_signatures.py
